maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:37: error: missing parameter type
      case_ => println("Ce cas ne devrait pas arriver. Corrigez le problème SVP. ")
      ^